<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#008391"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:background="@color/colorAccent"
        android:src="@mipmap/barramedicos"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textViewEntre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/entre_com_o_seu_login"
        android:textColor="@color/branco"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="263dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_arredondado"
        android:gravity="center"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black" />


    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="265dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_arredondado"
        android:gravity="center"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       android:gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_entrar"
        android:text="@string/entrar"
        android:textColor="@color/branco"
        android:textSize="18sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googlebutton"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

    </com.google.android.gms.common.SignInButton>


    <TextView
        android:id="@+id/textViewCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/n_o_possui_login"
        android:textColor="@color/branco"
        android:textSize="17dp" />


    </LinearLayout>


</LinearLayout>
